# server

./: README.md
debian/: autobake-deb.sh
extra/: innochecksum.cc
extra/mariabackup/: fil_cur.cc  xtrabackup.cc
include/: my_sys.h
mysql-test/: .mtr  mysql-test-run.pl
mysql-test/main/: alter_table.result  binary_to_hex.result  check_constraint_show.result  connect_debug.result  constraints.result  constraints.test  ctype_binary.result  ctype_upgrade.result  fetch_first.result  fetch_first.test  foreign_key.result  information_schema.result  json_table_mysql.result  json_table_mysql.test  log_tables_upgrade.result  lowercase_fs_off.result  myisampack.result  mysql-bug41486.result  mysql-bug45236.result  mysql.result  mysql_comments.result  mysql_json_mysql_upgrade.result  mysql_json_mysql_upgrade_with_plugin_loaded.result  mysql_not_windows.result  mysql_protocols.result  mysql_upgrade-20228.result  (+31 more)
mysys/: lf_dynarray.c  lf_hash.cc  my_malloc.c  thr_mutex.c
scripts/: msql2mysql.sh  mysql_install_db.sh  mysql_secure_installation.sh  wsrep_sst_common.sh
sql/: ddl_log.cc  ddl_log.h  item_timefunc.cc  log_event.cc  log_event_server.cc  mysqld.cc  opt_sum.cc  service_wsrep.cc  slave.cc  sql_base.cc  sql_base.h  sql_class.cc  sql_class.h  sql_lex.cc  sql_lex.h  sql_parse.cc  sql_repl.cc  sql_select.cc  sql_show.cc  sql_show.h  sql_statistics.cc  sql_string.cc  sql_table.cc  sql_yacc.yy  table.cc  table.h  wsrep_high_priority_service.cc  wsrep_mysqld.cc  wsrep_mysqld.h  wsrep_server_service.cc  wsrep_thd.cc
tpool/: CMakeLists.txt  aio_uring.cc  tpool_generic.cc
(+89 files in other folders)
